--- a/sunum/sunum.html
+++ b/sunum/sunum.html
@@ -347,7 +347,6 @@ ggplot(yolculuk,
 
 ---
 
-## Sayı
 
 En son yıl
 
@@ -675,7 +674,7 @@ class: middle
 
 class: sub-topic center middle
 
-.sub-topic-note[RMarkdown ailesi]
+.sub-topic-note[R Markdown ailesi]
 
 
 ---
